<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="342dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:srcCompat="@drawable/dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/HN"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintEnd_toStartOf="@+id/seekBar"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/LN"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintStart_toEndOf="@+id/seekBar"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonreset"
                    android:text="reset"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/minusTxt"
                    app:layout_constraintEnd_toStartOf="@+id/editText6"
                    app:layout_constraintTop_toTopOf="@+id/editText6" />

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:id="@+id/autotext"
                    android:layout_height="0px"/>

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="49dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal"
                    android:nextFocusLeft="@id/autotext"
                    android:nextFocusUp="@id/autotext"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/button2"
                    app:layout_constraintTop_toBottomOf="@+id/editText7" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/plusTxt"
                    app:layout_constraintEnd_toStartOf="@+id/editText7"
                    app:layout_constraintTop_toTopOf="@+id/editText7" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="49dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="number|numberSigned|numberDecimal"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/editText6"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/chbTxt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/doc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:max="2"
                    android:thumb="@drawable/seek"
                    android:progressDrawable="@drawable/seek_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Auto"
                    app:layout_constraintEnd_toEndOf="@+id/seekBar"
                    app:layout_constraintStart_toStartOf="@+id/seekBar"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/doc0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText6" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>